Update User.java